2013-02-04  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #44166: Updating tt_content record does not re-index page

2013-01-15  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #44276: Endtime filter not matching generated date for unix time 0, leading to empty results

2012-12-26  Ingo Renner  <ingo@typo3.org>

	* Changed install script to install Apache Solr 3.6.2

2012-12-19  Ingo Renner  <ingo@typo3.org>

	* Release of version 2.8.2

	* Fixed remaining bugs in the date range facet renderer 

2012-12-17  Ingo Renner  <ingo@typo3.org>

	* Release of version 2.8.1

	* Fixed bug #44050: Wrong Apache Solr version loaded in multi install script, credits Hauke Meyer
	* Fixed bug #44005: Fatal error when saving records with start-/stoptime, credits Jonas Götze
	* Fixed broken date range facet renderer, credits Stefan Sprenger

2012-12-13  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #43394: Fatal error in results per page switch
	* Fixed bug #43721: LINK-Viewhelper fails to resolve typoscript-path as link target
	* Fixed bug #43701: config.index_enable has no effect for pages, credits Dmitry Dulepov
	* Fixed bug #43556: Insufficient absRefPrefix support for non-page-records, credits Stefan Galinski

2012-12-08  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #43720: LINK-Viewhelper fails with empty target, credits Sascha Egerer

2012-11-15  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug where results from spellchecking suggestions would highlight the original and thus wrong search keywords
	* Fixed a bug where results from spellchecking suggestions are not reusing the original query settings

2012-11-12  Ingo Renner  <ingo.renner@dkd.de>

	* Release of version 2.8.0

	* Fixed bug #39553: Disable Solr-Indexing on pages not working properly if CE's are edited
	* Fixed bug #42626: Pagebrowse problem when using & in facet name, credits Stephan Schuler

2012-11-07  Ingo Renner  <ingo.renner@dkd.de>
